# poliwatch

./: pyproject.toml
app/src/: multiselect.py  similarity.ipynb
app/src/book/: 01.md
src/: app.py  demo.py  local.py  original_app.py  utils.py
src/book/: 00.md  00.py  01.md  01.py
tmp/: users.csv
