[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Mats Dodd <mats.dodd12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pandas = "^2.1.3"
streamlit = "1.28.1"
boto3 = "^1.29.7"
scikit-learn = "^1.3.2" 
matplotlib = "^3.8.2"
pillow = "^10.1.0"
pygwalker = "^0.3.17"
graphviz = "^0.20.1"
streamlit-book = "^0.7.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
